[package]
name = "philiprehberger-http-test"
version = "0.1.2"
edition = "2021"
rust-version = "1.70"
authors = ["Philip Rehberger"]
description = "Declarative HTTP API integration testing framework with fluent assertions"
license = "MIT"
readme = "README.md"
repository = "https://github.com/philiprehberger/rs-http-test"
documentation = "https://docs.rs/philiprehberger-http-test"
keywords = ["http", "testing", "api", "integration", "assert"]
categories = ["development-tools::testing", "web-programming"]

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde_json = "1"
